* 2016.01.27 - * fixing installation of GCC trunk and LLVM trunk 
                 (preparing new engine to crowdsource optimizations)

* 2016.01.16 - * adding UOA and UID of found platforms into detection stream

* 2016.01.12 - * adding possibility to enter and record name of platform, accelerator, cpu and OS
                 to local cfg if not automatically detected (for crowdtuning)

* 2016.01.11 - * fixing remote repo recaching if selecting different public CK server
                 during program optimization crowdsourcing
               * fixing automatic package installation bug (when crowdsourcing autotuning)

* 2016.01.04 - * adding 'show' function to platform.* to list all platforms 
                 participating in crowd-tuning and their parameters

* 2016.01.03 - * fixing exchange of information during crowd-tuning
                 (possiblity to find platform description in all repos)
               * adding possibility to identify user when recording
                 results during crowdtuning

* 2016.01.02 - * fixing GPU/accelerator detection for ARM/Qualcomm (for crowdtuning)
               * fixing platform name detection (to crowdsource optimization)

* 2015.12.19 - * adding env var CK_PLATFORM_INIT_UOA to automatically 
                 add platform scripts to PATH when dealing with CPU/GPU frequency

* 2015.12.14 - * fixing soft:lib.opencl.mali compilation for Android
               * added /data/local/tmp/lib to LD_LIBRARY_PATH when 
                 benchmarking/running/autotuning/crowdtuning on Android 
                 (to copy there development libs for dynamic apps
                  while keeping directory clean)

* 2015.11.21 - * adding "batch_exit" : "exit /b $#return_code#$" to Windows and MingW OS descriptions

* 2015.11.20 - * improving OpenCL lib setup on Ubuntu

* 2015.11.09 - * extending soft:compiler.llvm - adding tool_postfix, for example -3.6 for clang-3.6
